@@ -25,7 +25,7 @@ public class PubSubConfig {
       setTenantCollectionTopicsQualifier(System.getenv(TENANT_COLLECTION_TOPICS_ENV_VAR_NAME));
     } catch (IllegalArgumentException e) {
       throw new IllegalArgumentException(
-        String.format("%s environment variable: %s", TENANT_COLLECTION_TOPICS_ENV_VAR_NAME, e.getMessage()), e);
+        "%s environment variable: %s".formatted(TENANT_COLLECTION_TOPICS_ENV_VAR_NAME, e.getMessage()), e);
     }
   }
 
@@ -47,7 +47,7 @@ public class PubSubConfig {
     if (isTenantCollectionTopicsEnabled &&
       !tenantCollectionTopicQualifier.matches(TENANT_COLLECTION_MATCH_REGEX)) {
       throw new IllegalArgumentException(
-        String.format("Tenant collection qualifier doesn't match %s",
+        "Tenant collection qualifier doesn't match %s".formatted(
           TENANT_COLLECTION_MATCH_REGEX));
     }
   }
